--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <!-- <span class="navbar-toggler-icon"></span> -->
         </button>
         <form class="d-flex" @submit.prevent="" role="search">
-          <input class="form-control me-2" type="search" placeholder="buscar..." aria-label="Search">
+          <input class="form-control me-2" type="search" id="input-value" placeholder="buscar..." aria-label="Search">
           <button class="btn btn-outline-success d-flex" type="submit">
             <i class="bi bi-search"></i>
           </button>
@@ -43,9 +43,6 @@
           <div id="categories-products">
 
           </div>
-          <li class="nav-link text-white" aria-current="page">
-           
-          </li>
         </ul>
         <hr>
       </div>
@@ -53,9 +50,19 @@
 
       <div class="container container-fluid fadeInDown second">
         <div class="d-flex justify-content-center my-5 fadeInDown third">
-          <h1>Productos</h1>
-          <!-- agregar filtros y orden asc y desc, crear busqueda desde el input y documentar readme -->
+          <h1>Productos en Stock</h1>
         </div>
+
+        <div class="d-flex justify-content-start">
+          <select class="form-select w-50" aria-label="Default select example" id="selected-order">
+            <option selected disabled>Selecciona una opción</option>
+            <option value="1" >Ordenar A-Z</option>
+            <option value="2" >Ordenar Z-A</option>
+            <option value="3" >Ordenar precio menor</option>
+            <option value="4" >Ordenar precio mayor</option>
+          </select>
+        </div>
+
         <div class="container my-5" >
           <div class="row row-cols-1 row-cols-md-3 g-4" id="products-show">    
          
@@ -75,7 +82,8 @@
     <script src="./assets/js/index.js"></script>
 
     <script>
-    //  getCategories();
+      getCategories();
+      createProductsByDefault();
     </script>
   </body>
 </html>
