--- a/productDetail.html
+++ b/productDetail.html
@@ -61,7 +61,7 @@
 
 
       <div class="container my-5" >
-        <div class="row row-cols-1 row-cols-md-3 g-4" id="products-show">    
+        <div class="row row-cols-1 d-flex justify-content-center row-cols-md-3 g-4" id="products-show">    
        
          
         </div>
@@ -78,7 +78,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="./assets/js/index.js"></script>
-  <script src="./assets/js/categoriesDetail.js"></script>
+  <script src="./assets/js/productDetail.js"></script>
 
   <script>
     getCategories();
